Fix z-index

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,6 +39,7 @@ a {
   bottom: 100px;
   left: 45%;
   opacity: 25%;
+  z-index: 100;
 }
 .DocSearch-Button:hover {
   opacity: 100%;
